redirect to gh pages

--- a/about.html
+++ b/about.html
@@ -8,10 +8,10 @@
     <meta name="author" content="Chris Cantey">
     <link rel="icon" href="../../favicon.ico">
 	<!--Facebook Share customization open graph meta tags-->
-	<meta property="og:image" content="http://geo-odyssey.com/links/Public/images/TeriBertinWR.png"/>
+	<meta property="og:image" content="http://ccantey.github.io/links/Public/images/TeriBertinWR.png"/>
 	<meta property="og:title" content="Geo-odyssey.com"/>
 	<meta property="og:description" content="Chris Cantey's web portfolio. Contains maps and apps created by Chris along with his resume and contact information."/>
-	<meta property="og:url" content="http://geo-odyssey.com/index.html"/>
+	<meta property="og:url" content="http://ccantey.github.io/index.html"/>
     <title>Geo-Odyssey | Chris Cantey</title>
 
     <!-- Bootstrap core CSS -->
@@ -385,7 +385,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	    <div class="row" style="margin-right:0">
 		  <div class="col-xs-6 col-md-3">
 		     <p>
-			   <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/InteractiveResource" property="dct:title" rel="dct:type">Website</span> hand coded by <a xmlns:cc="http://creativecommons.org/ns#" href="http://geo-odyssey.com/" property="cc:attributionName" rel="cc:attributionURL">Chris Cantey</a></br><a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution </br>4.0 International License</a>.
+			   <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/InteractiveResource" property="dct:title" rel="dct:type">Website</span> hand coded by <a xmlns:cc="http://creativecommons.org/ns#" href="http://ccantey.github.io/" property="cc:attributionName" rel="cc:attributionURL">Chris Cantey</a></br><a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution </br>4.0 International License</a>.
 			</p>
 		  </div>
 		  <div class="col-md-2"></div>  <!-- space out with columns -->
