--- a/portfolio.html
+++ b/portfolio.html
@@ -8,10 +8,10 @@
     <meta name="author" content="Chris Cantey">
     <link rel="icon" href="../../favicon.ico">
 	<!--Facebook Share customization open graph meta tags-->
-	<meta property="og:image" content="http://geo-odyssey.com/links/Public/images/TeriBertinWR.png"/>
+	<meta property="og:image" content="http://ccantey.github.io/links/Public/images/TeriBertinWR.png"/>
 	<meta property="og:title" content="Geo-odyssey.com"/>
 	<meta property="og:description" content="Chris Cantey's web portfolio. Contains maps and apps created by Chris along with his resume and contact information."/>
-	<meta property="og:url" content="http://geo-odyssey.com/index.html"/>
+	<meta property="og:url" content="http://ccantey.github.io/index.html"/>
     <title>Geo-Odyssey | Chris Cantey</title>
 
     <!-- Bootstrap core CSS -->
@@ -243,7 +243,7 @@ $(document).ready(function() {
 			            	<h4>#Sandy</h4>
 			            	<p style="color:#b8860b"><i class="glyphicon glyphicon-certificate"></i> Winner of the 2013 NACIS Best Interactive Mapping Application.</p>
 							<p> Built using the Twitter API, MySQL, d3.js, ArcGIS in support of my Masters Thesis at UW-Madison with Caroline Rose and Morgan Jarocki. </p>
-			            	 <a href="http://geo-odyssey.com/links/sandy/" target="blank"><img id="crime" src="images/portfolio/Sandy.jpg" class="img-responsive" alt="Responsive image"></a>
+			            	 <a href="http://ccantey.github.io/links/sandy/" target="blank"><img id="crime" src="images/portfolio/Sandy.jpg" class="img-responsive" alt="Responsive image"></a>
 				</div>
 			 </div>
 			  <div class="col-md-1"></div>
@@ -291,7 +291,7 @@ $(document).ready(function() {
 				<div id="callout-alerts-no-default" class="bs-callout bs-callout">
 			            	<h4>Bivariate Choropleth with D3.js</h4>
 			            	<p>Minnesota election results using a value-by-alpha choropleth, built with <a href="http://d3js.org/" target="_blank">d3.js</a>. A dynamic layer of transparency is added to the choropleth map to indicate a secondary variable (usually population) that draws attention to statistically significant areas or regions of the map.</p>
-			            	 <a href="http://geo-odyssey.com/links/choropleth/index.html" target="blank"><img id="crime" src="images/portfolio/MinnesotaElection.jpg" class="img-responsive" alt="Responsive image"></a>
+			            	 <a href="http://ccantey.github.io/links/choropleth/index.html" target="blank"><img id="crime" src="images/portfolio/MinnesotaElection.jpg" class="img-responsive" alt="Responsive image"></a>
 				</div>
 
 			 </div>
@@ -305,7 +305,7 @@ $(document).ready(function() {
 				<div id="callout-alerts-no-default" class="bs-callout bs-callout-primary">
 			            	<h4>@fluTracker</h4>
 			            	<p>Tracking and mapping the flu epidemic with the Twitter API.</p>
-			            	 <a href="http://geo-odyssey.com/links/flu/demo/index.html" target="blank"><img id="crime" src="images/portfolio/Flu.jpg" class="img-responsive" alt="Responsive image"></a>
+			            	 <a href="http://ccantey.github.io/links/flu/demo/index.html" target="blank"><img id="crime" src="images/portfolio/Flu.jpg" class="img-responsive" alt="Responsive image"></a>
 				</div>
 			 </div>
 			  <div class="col-md-1"></div>
@@ -318,7 +318,7 @@ $(document).ready(function() {
 				<div id="callout-alerts-no-default" class="bs-callout bs-callout-success">
 			            	<h4>2012 Presidential Election</h4>
 			            	<p>Presenting an alternative model to the red state vs blue state mapping techniques.</p>
-			            	 <a href="http://geo-odyssey.com/links/election/demo/index.html" target="blank"><img id="crime" src="images/portfolio/572.jpg" class="img-responsive" alt="Responsive image"></a>
+			            	 <a href="http://ccantey.github.io/links/election/demo/index.html" target="blank"><img id="crime" src="images/portfolio/572.jpg" class="img-responsive" alt="Responsive image"></a>
 				</div>
 			 </div>
 			  <div class="col-md-1"></div>
@@ -593,7 +593,7 @@ $(document).ready(function() {
 	    <div class="row" style="margin-right:0">
 		  <div class="col-xs-6 col-md-3">
 		     <p>
-			   <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/InteractiveResource" property="dct:title" rel="dct:type">Website</span> hand coded by <a xmlns:cc="http://creativecommons.org/ns#" href="http://geo-odyssey.com/" property="cc:attributionName" rel="cc:attributionURL">Chris Cantey</a></br><a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution </br>4.0 International License</a>.
+			   <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/InteractiveResource" property="dct:title" rel="dct:type">Website</span> hand coded by <a xmlns:cc="http://creativecommons.org/ns#" href="http://ccantey.github.io/" property="cc:attributionName" rel="cc:attributionURL">Chris Cantey</a></br><a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution </br>4.0 International License</a>.
 			</p>
 		  </div>
 		  <div class="col-md-2"></div>  <!-- space out with columns -->
