redirect to gh pages

--- a/about.html
+++ b/about.html
@@ -9,10 +9,10 @@
     <link rel="icon" href="../../favicon.ico">
 	<!--Facebook Share customization open graph meta tags-->
 	<meta property="og:image" content="http://ccantey.github.io/links/Public/images/TeriBertinWR.png"/>
-	<meta property="og:title" content="Geo-odyssey.com"/>
+	<meta property="og:title" content="ccantey.github.io"/>
 	<meta property="og:description" content="Chris Cantey's web portfolio. Contains maps and apps created by Chris along with his resume and contact information."/>
 	<meta property="og:url" content="http://ccantey.github.io/index.html"/>
-    <title>Geo-Odyssey | Chris Cantey</title>
+    <title>Chris Cantey</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -391,7 +391,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		  <div class="col-md-2"></div>  <!-- space out with columns -->
 		  <div class="col-xs-6 col-md-2">
 		    <p>
-			  <a id="FB"  title="Share on Facebook" target="_blank" href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fgeo-odyssey.com/index.html">
+			  <a id="FB"  title="Share on Facebook" target="_blank" href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fccantey.github.io/index.html">
                 <button id="fbbutton" type="button" class="btn btn-md" style="padding: 0 20px 0 0">			  
                 <i class="fa fa-facebook fa-lg"></i></button>Facebook 
 		      </a>
@@ -434,7 +434,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			<h4 class="modal-title" id="myModalLabel">Welcome!</h4>
 		  </div>
 		  <div class="modal-body">
-			<img id="git" src="images/git.png"/><p id="modalBody">Geo-Odyssey.com and all of its contents were hand-coded by Chris Cantey, the maps where created by him. It is licensed under Creative Commons, so go ahead and use any of the code or content that you wish. Contact info at the bottom of each page.</p>
+			<img id="git" src="images/git.png"/><p id="modalBody">ccantey.github.io and all of its contents were hand-coded by Chris Cantey, the maps where created by him. It is licensed under Creative Commons, so go ahead and use any of the code or content that you wish. Contact info at the bottom of each page.</p>
 		  </div>
 		  <div class="modal-footer">
 			Cheers!
