--- a/links/sandy/index.html
+++ b/links/sandy/index.html
@@ -6,13 +6,13 @@
 
 		<!--main stylesheet-->
 		<link rel="stylesheet" href="css/style.css" />
-		<link rel="stylesheet" href="css/colorbox.css" />
+		<!-- <link rel="stylesheet" href="css/colorbox.css" /> -->
 		<link href='http://fonts.googleapis.com/css?family=Electrolize' rel='stylesheet' type='text/css'>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script>
 			if(navigator.systemLanguage){
-alert('We are sorry, it appears that you are using Internet Explorer. Please use a Chrome, Firefox, Opera, anything but IE. Thank you!');
-}
+			alert('We are sorry, it appears that you are using Internet Explorer. Please use a Chrome, Firefox, Opera, anything but IE. Thank you!');
+			}
 </script>
 		
 		
