--- a/portfolio.html
+++ b/portfolio.html
@@ -124,8 +124,22 @@ $(document).ready(function() {
 				  </div>
 
         </div><!--module-->
-				<!------------------------------------------------------------------------------------------------------------------------------------------>
-<!-----------------------------------------1------------------------------------------------------------------------------------------------->
+				
+<!-- 1 -->
+		<div id="open" class="row">
+			<div class="col-md-3"></div>
+				<div class="col-md-8">
+				<div id="callout-alerts-no-default" class="bs-callout bs-callout-danger">
+			            	<h4>Minnesota Legacy Ammendment Map</h4>
+			            	<!-- <p style="color:#b8860b"><i class="glyphicon glyphicon-asterisk"></i> Site currently in development.</p> -->
+			            	<p>In 2008, Minnesota's voters pssed the Clean Water, Land and Legacy Ammendment to the Minnesota Constitution. This application helps to monitor the funds distributed by this ammendment.</p>
+			            	 <a href="http://www.gis.leg.mn/iMaps/Legacy/" target="blank"><img id="crime" src="images/legacy.jpg" class="img-responsive" alt="Responsive image"></a>
+							 							 <p style="margin-top:10px;font-style:italic"><i class="glyphicon glyphicon-star"></i> Fully responsive application. Test across any browser or device size.</p>
+
+				</div>
+			 </div>
+			  <div class="col-md-1"></div>
+		</div>
 
  <div class="row">
 			<div id='districtFinder' class="col-md-3"></div>
@@ -141,7 +155,7 @@ $(document).ready(function() {
 			 </div>
 			  <div class="col-md-1"></div>
 		</div>
-		<!-----------------------------------------2------------------------------------------------------------------------------------------------->
+		<!--2 -->
 
 		<div id="sustain" class="row">
 			<div class="col-md-3"></div>
@@ -156,7 +170,7 @@ $(document).ready(function() {
 			 </div>
 			  <div class="col-md-1"></div>
 		</div>				
-<!-----------------------------------------1------------------------------------------------------------------------------------------------->
+<!-- -1 -->
 
  <div class="row">
 			<div id='cityviewer' class="col-md-3"></div>
@@ -173,7 +187,7 @@ $(document).ready(function() {
 			  <div class="col-md-1"></div>
 		</div>
 
-		<!-----------------------------------------2------------------------------------------------------------------------------------------------->
+		<!-- -2 -->
 
 		<div id="open" class="row">
 			<div class="col-md-3"></div>
@@ -190,7 +204,7 @@ $(document).ready(function() {
 			  <div class="col-md-1"></div>
 		</div>
 
-		<!-----------------------------------------2------------------------------------------------------------------------------------------------->
+		<!-- -2 -->
 
 		<div id="rapids" class="row">
 			<div class="col-md-3"></div>
@@ -206,7 +220,7 @@ $(document).ready(function() {
 			 </div>
 			  <div class="col-md-1"></div>
 		</div>
-		<!------------------------------------------3------------------------------------------------------------------------------------------------>
+		<!--3-->
                 <div id="gis" class="row" >
 			<div class="col-md-3"></div>
 				<div class="col-md-8">
@@ -220,7 +234,7 @@ $(document).ready(function() {
 			 </div>
 			  <div class="col-md-1"></div>
 		</div>
-		<!------------------------------------------4------------------------------------------------------------------------------------------------>
+		<!--4-->
                <div id="sandy" class="row">
 			<div class="col-md-3"></div>
 				<div class="col-md-8">
@@ -234,7 +248,7 @@ $(document).ready(function() {
 			 </div>
 			  <div class="col-md-1"></div>
 		</div>
-		<!--------------------------------------------5---------------------------------------------------------------------------------------------->
+		<!--5-->
 
 		<div id="form" class="row" >
 			<div class="col-md-3"></div>
@@ -249,7 +263,7 @@ $(document).ready(function() {
 			  <div class="col-md-1"></div>
 		</div>
 		
-		<!--------------------------------------------6---------------------------------------------------------------------------------------------->
+		<!--6-->
 		<!--<div id="dl" class="row">
 			<div class="col-md-3"></div>
 				<div class="col-md-8">
@@ -264,7 +278,7 @@ $(document).ready(function() {
 			  <div class="col-md-1"></div>
 		</div>-->
 		
-		<!--------------------------------------------------------------------------------------------------------------------------------------------->
+		
                 <div id="bv" class="row">
 			<div class="col-md-3"></div>
 				<div class="col-md-8">
@@ -284,7 +298,7 @@ $(document).ready(function() {
 			 </div>
 			  <div class="col-md-1"></div>
 		</div>
-		<!---------------------------------------------7--------------------------------------------------------------------------------------------->
+		<!-- 7 -->
 		 <div id="flu" class="row">
 			<div class="col-md-3"></div>
 				<div class="col-md-8">
@@ -297,7 +311,7 @@ $(document).ready(function() {
 			 </div>
 			  <div class="col-md-1"></div>
 		</div>
-		<!--------------------------------------------8---------------------------------------------------------------------------------------------->
+		<!--8-->
 
 		<div id="election" class="row">
 			<div class="col-md-3"></div>
@@ -311,7 +325,7 @@ $(document).ready(function() {
 			  <div class="col-md-1"></div>
 		</div>
 		
-		<!--------------------------------------------9---------------------------------------------------------------------------------------------->
+		<!--9-->
         <div id="proto" class="row">
 			<div class="col-md-3"></div>
 				<div class="col-md-8">
@@ -323,7 +337,7 @@ $(document).ready(function() {
 			 </div>
 			  <div class="col-md-1"></div>
 		</div>
-		<!-------------------------------------------10---------------------------------------------------------------------------------------------->
+		<!---10-->
         <div id="uxd" class="row">
 			<div class="col-md-3"></div>
 				<div class="col-md-8">
@@ -345,7 +359,7 @@ $(document).ready(function() {
 			 </div>
 			  <div class="col-md-1"></div>
 		</div>
-		<!-------------------------------------------10---------------------------------------------------------------------------------------------->
+		<!---10 -->
         <div id="static" class="row">
 			<div class="col-md-3"></div>
 				<div class="col-md-8">
@@ -367,7 +381,7 @@ $(document).ready(function() {
 			 </div>
 			  <div class="col-md-1"></div>
 		</div>
-		<!---------------------------------------------done with big--------------------------------------------------------------------------------------------->
+		<!---done with big-->
 		<div id="resolution" class="row" style="margin-top:15px">
 			<div class="col-md-3"></div>
 				<div class="col-md-8">				
@@ -382,7 +396,7 @@ $(document).ready(function() {
 			  
 			</p></div>
 		</div>
-	        <!---------------------------------------------small first row--------------------------------------------------------------------------------------------->
+	        <!---small first row-->
 
 		   <div id="bcycle" class="row">
 			<div class="col-md-3"></div>
@@ -403,7 +417,7 @@ $(document).ready(function() {
 
 			  <div class="col-md-1"></div>
 		</div>
-		<!---------------------------------------------2nd row--------------------------------------------------------------------------------------------->
+		<!---2nd row -->
 		   <div id="orange" class="row">
 			<div class="col-md-3"></div>
 				<div class="col-xs-6 col-md-4">				
@@ -428,7 +442,7 @@ $(document).ready(function() {
 
 			  <div class="col-md-1"></div>
 		</div>
-		<!---------------------------------------------3rd row--------------------------------------------------------------------------------------------->
+		<!---3rd row -->
 	       <div id="bison" class="row">
 			<div class="col-md-3"></div>
 				<div class="col-xs-6 col-md-4">				
@@ -454,7 +468,7 @@ $(document).ready(function() {
 			  <div class="col-md-1"></div>
 		</div>
 		
-			        <!---------------------------------------------4th row--------------------------------------------------------------------------------------------->
+			        <!---4th row -->
 
 		   <div id="electoral" class="row">
 			<div class="col-md-3"></div>
@@ -480,7 +494,7 @@ $(document).ready(function() {
 
 			  <div class="col-md-1"></div>
 		</div>
-		<!---------------------------------------------5th row--------------------------------------------------------------------------------------------->
+		<!---5th row-->
 		   <div id="uninsured" class="row">
 			<div class="col-md-3"></div>
 				<div class="col-xs-6 col-md-4">				
@@ -505,7 +519,7 @@ $(document).ready(function() {
 
 			  <div class="col-md-1"></div>
 		</div>
-		<!---------------------------------------------6th row--------------------------------------------------------------------------------------------->
+		<!---6th row -->
 		<!--<div id="uninsured" class="row">
 			<div class="col-md-3"></div>
 				<div class="col-xs-6 col-md-4">				
@@ -525,63 +539,7 @@ $(document).ready(function() {
 			
 			  <div class="col-md-1"></div>
 		</div>
-		<!---------------------------------------------3rd row--------------------------------------------------------------------------------------------->
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
+		<!---3rd row -->	
 		
     </article>
 
