add legacy to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -102,15 +102,18 @@ $(document).ready(function() {
 				  <div id="leftNav" class="span3 bs-docs-sidebar" role="navigation" style="line-height:.85em" >
 					<ul  class="nav nav-list affix"  >
 					  <li  style="padding-left: 15px;"><strong>Interactive Maps</strong></li>
-					  <li style="margin-top: 15px;"><a href="#top"><i class="icon-chevron-right"></i> Grow Rapids</a></li>
+					  <li style="margin-top: 15px;"><a href="#top"><i class="icon-chevron-right"></i> Legacy Ammendment</a></li>
+					  <li><a href="#districtfinder"><i class="icon-chevron-right"></i> Who Represents Me?</a></li>
 					  <li><a href="#cityviewer"><i class="icon-chevron-right"></i> CityViewer</a></li>
+					  <li><a href="#grow"><i class="icon-chevron-right"></i> Grow Rapids</a></li>
+					  
 					  <li><a href="#sustain"><i class="icon-chevron-right"></i> OpenData Portal</a></li>
 					  <li><a href="#open"><i class="icon-chevron-right"></i> Sustainability</a></li>				  
 					  <li><a href="#rapids"><i class="icon-chevron-right"></i> Rapids GIS</a></li>
 					  <li><a href="#gis"><i class="icon-chevron-right"></i> gis.wirapids.org</a></li>
 					  <li ><a href="#sandy"><i class="icon-chevron-right"></i> #Sandy</a></li>
 					  <!--<li><a href="#form"><i class="icon-chevron-right"></i> Citizen Service</a></li>-->
-					  <li><a href="#dl"><i class="icon-chevron-right"></i> DataLink</a></li>
+					  <li><a href="#datalink"><i class="icon-chevron-right"></i> DataLink</a></li>
 					  <li><a href="#bv"><i class="icon-chevron-right"></i> Bivariate Choropleth</a></li>
 					  <li><a href="#flu"><i class="icon-chevron-right"></i> @fluTracker</a></li>
 					  <li><a href="#election"><i class="icon-chevron-right"></i> Election</a></li>
@@ -126,7 +129,7 @@ $(document).ready(function() {
         </div><!--module-->
 				
 <!-- 1 -->
-		<div id="open" class="row">
+		<div id="districtfinder" class="row">
 			<div class="col-md-3"></div>
 				<div class="col-md-8">
 				<div id="callout-alerts-no-default" class="bs-callout bs-callout-danger">
@@ -142,7 +145,7 @@ $(document).ready(function() {
 		</div>
 
  <div class="row">
-			<div id='districtFinder' class="col-md-3"></div>
+			<div id='cityviewer' class="col-md-3"></div>
 				<div class="col-md-8">
 				<div id="callout-alerts-no-default" class="bs-callout bs-callout-success">
 			            	<h4>Who Represents Me?</h4>
@@ -157,7 +160,7 @@ $(document).ready(function() {
 		</div>
 		<!--2 -->
 
-		<div id="sustain" class="row">
+		<div id="grow" class="row">
 			<div class="col-md-3"></div>
 				<div class="col-md-8">
 				<div id="callout-alerts-no-default" class="bs-callout bs-callout-warning">
@@ -173,7 +176,7 @@ $(document).ready(function() {
 <!-- -1 -->
 
  <div class="row">
-			<div id='cityviewer' class="col-md-3"></div>
+			<div id='sustain' class="col-md-3"></div>
 				<div class="col-md-8">
 				<div id="callout-alerts-no-default" class="bs-callout bs-callout">
 			            	<h4>Grow Rapids</h4>
@@ -260,26 +263,13 @@ $(document).ready(function() {
 			            	 <a href="http://ccantey.github.io/links/sandy/" target="blank"><img id="crime" src="images/portfolio/Sandy.jpg" class="img-responsive" alt="Responsive image"></a>
 				</div>
 			 </div>
-			  <div class="col-md-1"></div>
+			  <div id="datalink"class="col-md-1"></div>
 		</div>
 		
-		<!--6-->
-		<!--<div id="dl" class="row">
-			<div class="col-md-3"></div>
-				<div class="col-md-8">
-				<div id="callout-alerts-no-default" class="bs-callout bs-callout">
-			            	<h4>Citizen Service/Complaint Form</h4>
-			            	<p>Currently in development in partnership with the City of Marshfield, WI. Core application services available, styling remaining. Feel free to create a new request as they are forwarded to a dev database. Requests in production are forwarded to appropriate department with status reported back to citizen as staff address complaints.</p>
-			            	 <a href="http://gis.wirapids.org/geoform/#mapDiv" target="blank"><img id="crime" src="images/portfolio/ServiceForm.jpg" class="img-responsive" alt="Responsive image"></a>
-			            	 <p style="margin-top:10px;font-style:italic"><i class="glyphicon glyphicon-star"></i> Fully responsive application. Test across any browser or device size.</p>
-				</div>
 
-			 </div>
-			  <div class="col-md-1"></div>
-		</div>-->
 		
 		
-                <div id="bv" class="row">
+                <div  class="row">
 			<div class="col-md-3"></div>
 				<div class="col-md-8">
 				<div id="callout-alerts-no-default" class="bs-callout bs-callout-danger">
