--- a/about.html
+++ b/about.html
@@ -152,20 +152,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <p> <strong>Sr. IT Specialist</strong></p> 
 		  <p> <strong><a href="http://www.gis.leg.mn/" target="_blank">Minnesota Legislative Coordinating Commission</a>, St. Paul, MN</strong></p>
 		  <ul>
-       <li>GIS analyst/cartographer </li> 
-	<li>Open-source GIS data and application development</li>
-	<li>Web/mapping application development</li>
-	<li>Legislative GIS data stewerd</li>
-        <li>Decennial redistricting of Senate and House</li>        
-	
-    
-
-	
-</ul>
+		       <li>Open-source GIS data and application development</li>
+               <li>GIS analyst/cartographer </li>	
+	           <li>Web/mapping application development</li>
+	           <li>Legislative GIS data stewerd</li>
+               <li>Decennial redistricting of Senate and House</li>        	
+           </ul>
 <br>
           
           <!------------------------------------------------------------------------------------------>
-		  <p class="pull-right">2014 - 2015, Contract support: 2015 - Current</p>
+		  <p class="pull-right">2014 - 2016</p>
           <p> <strong>GIS Programmer Analyst</strong></p> 
 		  <p> <strong><a href="http://gis.wirapids.org/" target="_blank">City of Wisconsin Rapids</a></strong></p>
 		  <ul>
@@ -273,17 +269,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 		   <p> <strong>Mapping Technologies: </strong></p> 
 		  <ul>
-                     <li>ESRI ArcGIS 9.X-10.X, ArcGIS Server, ArcGIS Online, Maptitude for Redistricting, Open source GIS (QGIS, GDAL, OGR, MapServer, Mapshaper, Indiemapper)</li>
+                     <li>ESRI ArcGIS 9.X-10.X, ArcGIS Server, ArcGIS Online, Maptitude for Redistricting, Open source GIS (QGIS, PostGIS, GDAL, OGR, MapServer, Mapshaper, Indiemapper)</li>
                  </ul>
 		  <br>
 		   <p> <strong>Web Development: </strong></p> 
 		  <ul>
-                     <li>HTML5, CSS3, JavaScript, SVG, PHP, Microsoft IIS, jQuery, Dojo, .NET, AJAX, Angular, Bootstrap, Dreamweaver, Firebug, Google Analytics, Git Version Control System</li>
+                     <li>HTML5, CSS3, JavaScript, SVG, PHP, Microsoft IIS, Apache, jQuery, Dojo, .NET, AJAX, Angular, Bootstrap, Node.js, Firebug, Google Analytics, Git Version Control System</li>
                   </ul>
 		  <br>
 		   <p> <strong>API Development: </strong></p> 
 		  <ul>
-                       <li>ArcGIS for JavaScript, D3.js, Leaflet, Twitter, Google Maps </li>
+                       <li>ArcGIS for JavaScript, D3.js, Leaflet, MapBox, MapServer, Twitter, Google Maps </li>
                   </ul>
 		  <br>
 		   <p> <strong>Graphics Software: </strong></p> 
