--- a/portfolio.html
+++ b/portfolio.html
@@ -166,7 +166,7 @@ $(document).ready(function() {
 				<div id="callout-alerts-no-default" class="bs-callout bs-callout-primary">
 			            	<h4>Who Represents Me? </h4>
 			            	<p style="color:#b8860b"><i class="glyphicon glyphicon-asterisk"></i> Experimental - Mapbox GL</p>
-			            	<p>Minnesota Legislative district finder mapping application with geocoding and mobile geolocation capability. An open-source app built with PostGIS, Leaflet, and MapServer.</p>
+			            	<p>Minnesota Legislative district finder mapping application with geocoding and mobile geolocation capability. An open-source app built with PostGIS and Mapbox GL.</p>
 			            	 <a href="http://gis.leg.mn/iMaps/districts-webGL/" target="blank"><img id="crime" src="images/webgl.jpg" class="img-responsive" alt="Responsive image"></a>
 							 							 <p style="margin-top:10px;font-style:italic"><i class="glyphicon glyphicon-star"></i> Fully responsive application. Test across any browser or device size.</p>
 
