--- a/about.html
+++ b/about.html
@@ -348,9 +348,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		  <ul>
 		        <li>Presenter: 2015 Wisconsin Land Information Assoc. | <a href="links/WLIA Presentation/index.html" target="_blank">Migrating your ArcGIS JS app to AMD</a></li>
 		        <li>Presenter: 2013 Minnesota GIS/LIS | <small>Interactive Cartography & Web Development with ArcGIS JS API</small></li>
+		        <li>1st Place: Interactive map | <small>2016 Cartography & Geographic Information Society (CAGIS)</small></li>
 		        <li>2nd Place: Interactive map | <small>2015 Wisconsin Land Information Association (WLIA)</small></li>
+		        <li>1st Place: Interactive map |<small> 2013 North American Cartographic Information Society (NACIS)</small> </li>
 		        <li>1st Place: Small-format map | <small>2013 Wisconsin Land Information Association (WLIA)</small></li>
-			<li>1st Place: Interactive map |<small> 2013 North American Cartographic Information Society (NACIS)</small> </li>
+			
 			<li>Trewartha Research Grant (UW-Madison)</li>
 			<li>1st Annual International Geocoding Conference Travel Grant | <small>Centers for Disease Control (CDC)</small></li>
 		        <li>Code for America | <small> Peer Network</small></li>
