add senate resolution

--- a/about.html
+++ b/about.html
@@ -352,7 +352,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		        <li>2nd Place: Interactive map | <small>2015 Wisconsin Land Information Association (WLIA)</small></li>
 		        <li>1st Place: Interactive map |<small> 2013 North American Cartographic Information Society (NACIS)</small> </li>
 		        <li>1st Place: Small-format map | <small>2013 Wisconsin Land Information Association (WLIA)</small></li>
-			
+			<li>Minnesota Senate Resolution honoring achievement in cartography from CAGIS</li>
 			<li>Trewartha Research Grant (UW-Madison)</li>
 			<li>1st Annual International Geocoding Conference Travel Grant | <small>Centers for Disease Control (CDC)</small></li>
 		        <li>Code for America | <small> Peer Network</small></li>
