--- a/portfolio.html
+++ b/portfolio.html
@@ -402,6 +402,25 @@ $(document).ready(function() {
 			</p></div>
 		</div>
 	        <!---small first row-->
+	         <div id="bcycle" class="row">
+			<div class="col-md-3"></div>
+				<div class="col-xs-6 col-md-4">				
+			        <div id="callout-alerts-no-default" class="bs-callout bs-callout-info">
+					        <h4>89th Minnesota Legislature</h4>
+							<p>Classically inspired legislative maps.</p>
+			            	<a href="assets/EightyNinthSenate.jpg" target="blank"><img id="crime" src="images/portfolio/thumbnails/Senate.jpg" class="img-responsive" alt="Responsive image"></a>
+				    </div>				
+			    </div>
+				<div class="col-xs-6 col-md-4">				
+			        <div id="callout-alerts-no-default" class="bs-callout bs-callout-warning">
+					        <h4>Mass produced (201) district maps</h4>
+							<p>See <a href="www.gis.leg.mn/hsemapdata.htm" target="blank">gis.leg.mn</a></p>
+			            	<a href="http://www.gis.leg.mn/pdf/leg2012/house/65B.pdf" target="blank"><img id="crime" src="images/portfolio/thumbnails/mapbooks.jpg" class="img-responsive" alt="Responsive image"></a>
+				    </div>			
+			    </div>
+
+			  <div class="col-md-1"></div>
+		</div>
 
 		   <div id="bcycle" class="row">
 			<div class="col-md-3"></div>
