--- a/portfolio.html
+++ b/portfolio.html
@@ -414,7 +414,7 @@ $(document).ready(function() {
 				<div class="col-xs-6 col-md-4">				
 			        <div id="callout-alerts-no-default" class="bs-callout bs-callout">
 					        <h4>Mass produced (201) district maps</h4>
-							<p>See <a href="www.gis.leg.mn/hsemapdata.htm" target="blank">gis.leg.mn</a> for all district maps.</p>
+							<p>See <a href="http://www.gis.leg.mn/hsemapdata.htm" target="blank">gis.leg.mn</a> for all district maps.</p>
 			            	<a href="http://www.gis.leg.mn/pdf/leg2012/house/65B.pdf" target="blank"><img id="crime" src="images/portfolio/thumbnails/mapbooks.jpg" class="img-responsive" alt="Responsive image"></a>
 				    </div>			
 			    </div>
