--- a/portfolio.html
+++ b/portfolio.html
@@ -457,6 +457,35 @@ $(document).ready(function() {
 
 			  <div class="col-md-1"></div>
 		</div>
+				<!---3rd row -->
+	       <div id="bison" class="row">
+			<div class="col-md-3"></div>
+				<div class="col-xs-6 col-md-4">				
+			        <!--<div id="callout-alerts-no-default" class="bs-callout bs-callout-primary">
+					        <h4>Orange Minneapolis</h4>
+							<p>Alternative Design</p>
+			            	<a href="assets/MplsOrangeSimplified.png" target="blank"><img id="crime" src="images/portfolio/thumbnails/OrangeMpls.jpg" class="img-responsive" alt="Responsive image"></a>
+				    </div>	-->	
+				<div id="callout-alerts-no-default" class="bs-callout bs-callout-danger">
+					<h4>Race</h4>
+					<p>Customized bivarieate color scheme</p>
+					<a href="assets/downloads/Race-Uninsured.pdf" target="blank">
+					    <img id="crime" src="assets/thumbnails/print/race.jpg" class="img-responsive" alt="Responsive image">
+					</a>
+				    </div>					
+			    </div>
+				<div class="col-xs-6 col-md-4">				
+			        <div id="callout-alerts-no-default" class="bs-callout bs-callout-primary">
+					        <h4>MN Election Results</h4>
+							<p>House District 16A</p>
+			            	<a href="assets/downloads/HouseAElection.pdf" target="blank">
+			            	    <img id="crime" src="assets/thumbnails/print/HouseElection.jpg" class="img-responsive" alt="Responsive image">
+			            	</a>
+				    </div>			
+			    </div>
+
+			  <div class="col-md-1"></div>
+		</div>
 
 		   <div id="bcycle" class="row">
 			<div class="col-md-3"></div>
