--- a/portfolio.html
+++ b/portfolio.html
@@ -709,7 +709,7 @@ $(document).ready(function() {
 			<h4 class="modal-title" id="myModalLabel">Welcome!</h4>
 		  </div>
 		  <div class="modal-body">
-			<img id="git" src="images/git.png"/><p id="modalBody">ccantey.github.io and all of its contents were hand-coded by Chris Cantey, the maps where created by him. It is licensed under Creative Commons, so go ahead and use any of the code or content that you wish. Contact info at the bottom of each page.</p>
+			<img id="git" src="assets/siteimages/git.png"/><p id="modalBody">geo-odyssey.com (ccantey.github.io) and all of its contents were hand-coded by Chris Cantey, the maps where created by him. It is licensed under Creative Commons, so go ahead and use any of the code or content that you wish. Contact info at the bottom of each page.</p>
 		  </div>
 		  <div class="modal-footer">
 			Cheers!
