--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <title>Chris Cantey</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link href="css/carousel.css" rel="stylesheet">
 
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
@@ -437,18 +437,18 @@ $(document).ready(function() {
 	         <div id="bcycle" class="row">
 			<div class="col-md-3"></div>
 				<div class="col-xs-6 col-md-4">				
-			        <div id="callout-alerts-no-default" class="bs-callout bs-callout-success">
+			        <div id="callout-alerts-no-default" class="bs-callout bs-callout-default">
 					        <h4>89th Minnesota Legislature</h4>
 							<p>Classically inspired legislative maps.</p>
-			            	<a href="assets/downloads/EightyNinthSenate.jpg" target="blank">
+			            	<a href="http://www.gis.leg.mn/pdf/elec2012/MNsenate/RedBlueSenateANSI_E.pdf" target="blank">
 			            	    <img id="crime" src="assets/thumbnails/print/Senate.jpg" class="img-responsive" alt="Responsive image">
 			            	</a>
 				    </div>				
 			    </div>
 				<div class="col-xs-6 col-md-4">				
-			        <div id="callout-alerts-no-default" class="bs-callout bs-callout">
-					        <h4>Mass produced (201) district maps</h4>
-							<p>See <a href="http://www.gis.leg.mn/hsemapdata.htm" target="blank">gis.leg.mn</a> for all district maps.</p>
+			        <div id="callout-alerts-no-default" class="bs-callout bs-callout-warning">
+					        <h4>Automated map production - Data Driven Pages</h4>
+							<p>See <a href="http://www.gis.leg.mn/hsemapdata.htm" target="blank">gis.leg.mn</a> for all 201 district maps.</p>
 			            	<a href="http://www.gis.leg.mn/pdf/leg2012/house/65B.pdf" target="blank">
 			            	    <img id="crime" src="assets/thumbnails/print/mapbooks.jpg" class="img-responsive" alt="Responsive image">
 			            	</a>
@@ -467,8 +467,8 @@ $(document).ready(function() {
 			            	<a href="assets/MplsOrangeSimplified.png" target="blank"><img id="crime" src="images/portfolio/thumbnails/OrangeMpls.jpg" class="img-responsive" alt="Responsive image"></a>
 				    </div>	-->	
 				<div id="callout-alerts-no-default" class="bs-callout bs-callout-danger">
-					<h4>Race</h4>
-					<p>Customized bivarieate color scheme</p>
+					<h4>Race & the Uninsured</h4>
+					<p>Customized bivariate color scheme</p>
 					<a href="assets/downloads/Race-Uninsured.pdf" target="blank">
 					    <img id="crime" src="assets/thumbnails/print/race.jpg" class="img-responsive" alt="Responsive image">
 					</a>
@@ -486,10 +486,25 @@ $(document).ready(function() {
 
 			  <div class="col-md-1"></div>
 		</div>
-
-		   <div id="bcycle" class="row">
+<!---NEW -->
+	       <div id="bison" class="row">
 			<div class="col-md-3"></div>
 				<div class="col-xs-6 col-md-4">				
+			        <!--<div id="callout-alerts-no-default" class="bs-callout bs-callout-primary">
+					        <h4>Orange Minneapolis</h4>
+							<p>Alternative Design</p>
+			            	<a href="assets/MplsOrangeSimplified.png" target="blank"><img id="crime" src="images/portfolio/thumbnails/OrangeMpls.jpg" class="img-responsive" alt="Responsive image"></a>
+				    </div>	-->	
+				<div id="callout-alerts-no-default" class="bs-callout bs-callout-success">
+					<h4>Composite</h4>
+					<p>Customized bivariate color scheme</p>
+					<a href="assets/downloads/index.pdf" target="blank">
+					    <img id="crime" src="assets/thumbnails/print/composite.jpg" class="img-responsive" alt="Responsive image">
+					</a>
+				    </div>					
+			    </div>
+				
+			    <div class="col-xs-6 col-md-4">				
 			        <div id="callout-alerts-no-default" class="bs-callout bs-callout-info">
 					        <h4>@New Years #Resolutions</h4>
 							<p style="color:#b8860b"><i class="glyphicon glyphicon-certificate"></i> Winner of the WLIA 2013 Best Small-format Map.</p>
@@ -497,6 +512,29 @@ $(document).ready(function() {
 			            	    <img id="crime" src="assets/thumbnails/print/NewYears.jpg" class="img-responsive" alt="Responsive image">
 			            	</a>
 				    </div>				
+			    </div>
+
+			  <div class="col-md-1"></div>
+		</div>
+		   <div id="bcycle" class="row">
+			<div class="col-md-3"></div>
+				<!-- <div class="col-xs-6 col-md-4">				
+			        <div id="callout-alerts-no-default" class="bs-callout bs-callout-info">
+					        <h4>@New Years #Resolutions</h4>
+							<p style="color:#b8860b"><i class="glyphicon glyphicon-certificate"></i> Winner of the WLIA 2013 Best Small-format Map.</p>
+			            	<a href="assets/downloads/TwitterNYresolutions.png" target="blank">
+			            	    <img id="crime" src="assets/thumbnails/print/NewYears.jpg" class="img-responsive" alt="Responsive image">
+			            	</a>
+				    </div>				
+			    </div> -->
+			    <div class="col-xs-6 col-md-4">				
+			        <div id="callout-alerts-no-default" class="bs-callout bs-callout-success">
+					        <h4>Roundabout</h4>
+							<p>City of Wisconsin Rapids | Ribbon Cutting Ceremony</p>
+			            	<a href="assets/downloads/RibbonCutting.pdf" target="blank">
+			            	    <img id="crime" src="assets/thumbnails/print/Roundabout.jpg" class="img-responsive" alt="Responsive image">
+			            	</a>
+				    </div>			
 			    </div>
 				<div class="col-xs-6 col-md-4">				
 			        <div id="callout-alerts-no-default" class="bs-callout bs-callout-warning">
@@ -556,12 +594,13 @@ $(document).ready(function() {
 					</a>
 				    </div>					
 			    </div>
-				<div class="col-xs-6 col-md-4">				
-			        <div id="callout-alerts-no-default" class="bs-callout bs-callout-success">
-					        <h4>Roundabout</h4>
-							<p>City of Wisconsin Rapids | Ribbon Cutting Ceremony</p>
-			            	<a href="assets/downloads/RibbonCutting.pdf" target="blank">
-			            	    <img id="crime" src="assets/thumbnails/print/Roundabout.jpg" class="img-responsive" alt="Responsive image">
+				
+			    <div class="col-xs-6 col-md-4">				
+			        <div id="callout-alerts-no-default" class="bs-callout bs-callout-default">
+					        <h4>The Uninsured (2009) States of America</h4>
+							<p>Value-by-alpha choropleth map</p>
+			            	<a href="assets/downloads/Uninsured.pdf" target="blank">
+			            	    <img id="crime" src="assets/thumbnails/print/uninsured.jpg" class="img-responsive" alt="Responsive image">
 			            	</a>
 				    </div>			
 			    </div>
@@ -722,7 +761,8 @@ $(document).ready(function() {
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
 
-    <script src="js/bootstrap.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	<script src="js/app.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
