--- a/portfolio.html
+++ b/portfolio.html
@@ -528,7 +528,7 @@ $(document).ready(function() {
 				    </div>				
 			    </div> -->
 			    <div class="col-xs-6 col-md-4">				
-			        <div id="callout-alerts-no-default" class="bs-callout bs-callout-success">
+			        <div id="callout-alerts-no-default" class="bs-callout bs-callout-default">
 					        <h4>Roundabout</h4>
 							<p>City of Wisconsin Rapids | Ribbon Cutting Ceremony</p>
 			            	<a href="assets/downloads/RibbonCutting.pdf" target="blank">
