--- a/portfolio.html
+++ b/portfolio.html
@@ -468,7 +468,7 @@ $(document).ready(function() {
 				    </div>	-->	
 				<div id="callout-alerts-no-default" class="bs-callout bs-callout-danger">
 					<h4>Race & the Uninsured</h4>
-					<p>Customized bivariate color scheme</p>
+					<p>A Cube-helix approach to bivariate color schemes</p>
 					<a href="assets/downloads/Race-Uninsured.pdf" target="blank">
 					    <img id="crime" src="assets/thumbnails/print/race.jpg" class="img-responsive" alt="Responsive image">
 					</a>
@@ -496,8 +496,8 @@ $(document).ready(function() {
 			            	<a href="assets/MplsOrangeSimplified.png" target="blank"><img id="crime" src="images/portfolio/thumbnails/OrangeMpls.jpg" class="img-responsive" alt="Responsive image"></a>
 				    </div>	-->	
 				<div id="callout-alerts-no-default" class="bs-callout bs-callout-success">
-					<h4>Composite</h4>
-					<p>Customized bivariate color scheme</p>
+					<h4>Composite Index</h4>
+					<p>Normalized Race and Health Metrics</p>
 					<a href="assets/downloads/index.pdf" target="blank">
 					    <img id="crime" src="assets/thumbnails/print/composite.jpg" class="img-responsive" alt="Responsive image">
 					</a>
