--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <!-- Google Tag Manager -->
 
     <script>
+      // spam blocker via https://github.com/MohamedBassem/spam-referrals-blocker
       if( !isSpamReferral() ){
         // Your google analytics code goes here.
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
