--- a/portfolio.html
+++ b/portfolio.html
@@ -35,6 +35,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script>
+      // spam blocker via https://github.com/MohamedBassem/spam-referrals-blocker
       if( !isSpamReferral() ){
         // Your google analytics code goes here.
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
