add loading gif

--- a/links/sandy/index.html
+++ b/links/sandy/index.html
@@ -107,7 +107,7 @@
 			<div id = "boroughsButton"><p>hide boroughs</p></div>
 			
 			<div id = "mapContainer"> 
-			<img id="loading" src="../../../assets/img/ajax-loader2.gif" style="position: absolute;top:30%;left:48%;z-index:1111;width:42px;height:42px;">
+			<img id="loading" src="img/ajax-loader2.gif" style="position: absolute;top:30%;left:48%;z-index:1111;width:42px;height:42px;">
 			</div>
 			<div class="fb-like" style="float:left" data-href="http://geo-odyssey.com/links/sandy/" data-width="450" data-colorscheme="dark" data-show-faces="false" data-send="true"></div>
 			<div id="aboutContainer">
