--- a/links/choropleth/index.html
+++ b/links/choropleth/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="../../assets/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link href="../../assets/css/bootstrap-responsive.css" rel="stylesheet">
 	<link href="../../assets/css/docs.css" rel="stylesheet">
     <link href="../../assets/js/google-code-prettify/google-code-prettify.css" rel="stylesheet">
@@ -140,13 +140,14 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     
-    <script src="../../assets/js/jquery.js"></script>
-	<script src="../../assets/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+	<!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
  
 
-    <script src="../../assets/js/holder/holder.js"></script>
-    <script src="../../assets/js/google-code-prettify/google-code-prettify.js"></script>
+    <script src="../../js/holder/holder.js"></script>
+    <script src="../../js/google-code-prettify/google-code-prettify.js"></script>
 
 
 	
