add old assets back into local directory

--- a/links/choropleth/index.html
+++ b/links/choropleth/index.html
@@ -10,9 +10,9 @@
 
     <!-- Le styles -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<link href="../../assets/css/bootstrap-responsive.css" rel="stylesheet">
-	<link href="../../assets/css/docs.css" rel="stylesheet">
-    <link href="../../assets/js/google-code-prettify/google-code-prettify.css" rel="stylesheet">
+	<link href="css/bootstrap-responsive.css" rel="stylesheet">
+	<link href="css/docs.css" rel="stylesheet">
+    <link href="js/google-code-prettify/google-code-prettify.css" rel="stylesheet">
 	<!--main stylesheet-->
 	<link rel="stylesheet" href="css/style.css"/>
     
@@ -146,8 +146,8 @@
 
  
 
-    <script src="../../js/holder/holder.js"></script>
-    <script src="../../js/google-code-prettify/google-code-prettify.js"></script>
+    <script src="js/holder/holder.js"></script>
+    <script src="js/google-code-prettify/google-code-prettify.js"></script>
 
 
 	
