--- a/links/choropleth/index.html
+++ b/links/choropleth/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap.css">
 	<link href="css/bootstrap-responsive.css" rel="stylesheet">
 	<link href="css/docs.css" rel="stylesheet">
     <link href="js/google-code-prettify/google-code-prettify.css" rel="stylesheet">
