--- a/links/choropleth/index.html
+++ b/links/choropleth/index.html
@@ -146,7 +146,7 @@
  
 
     <script src="js/holder/holder.js"></script>
-    <script src="js/google-code-prettify/google-code-prettify.js"></script>
+    <!-- <script src="js/google-code-prettify/google-code-prettify.js"></script> -->
 
 
 	
