--- a/links/choropleth/index.html
+++ b/links/choropleth/index.html
@@ -51,7 +51,7 @@
                 <a href="research.html">Research Agenda</a>
               </li>-->
               <li class="">
-                <a href="../../contact.html">Contact</a>
+                <a href="../../portfolio.html">Portfolio</a>
               </li>
             </ul>
           </div>
