--- a/links/sandy/index.html
+++ b/links/sandy/index.html
@@ -34,9 +34,9 @@
 	            </div>
 	            <div class="navbar-collapse collapse">
 	              <ul class="nav navbar-nav">
-	                <li id="nav-home" ><a href="index.html">Home</a></li>
-	                <li id="nav-about"><a href="about.html">About</a></li>
-	                <li id="nav-portfolio"  class="active"><a href="#portfolio">Portfolio</a></li>
+	                <li id="nav-home" ><a href="geo-odyssey.com">Chris Cantey</a></li>
+	                <li id="nav-about"><a href="about.html">Caroline Rose</a></li>
+	                <li id="nav-portfolio" ><a href="#portfolio">Morgan Jarocki</a></li>
 	              </ul>
 	            </div>
 	          </div>
