navbar link highlight

--- a/links/sandy/index.html
+++ b/links/sandy/index.html
@@ -34,7 +34,7 @@
 	            </div>
 	            <div class="navbar-collapse collapse">
 	              <ul class="nav navbar-nav">
-	                <li id="nav-home" ><a href="geo-odyssey.com" target="_blank">Chris Cantey</a></li>
+	                <li id="nav-home" ><a href="http://www.geo-odyssey.com" target="_blank">Chris Cantey</a></li>
 	                <li id="nav-about"><a href="http://geography.wisc.edu/cartography/blog/profile-caroline-rose/" target="_blank">Caroline Rose</a></li>
 	                <li id="nav-portfolio" ><a href="https://www.linkedin.com/in/morgan-jarocki-51264713" target="_blank">Morgan Jarocki</a></li>
 	              </ul>
