center a little - enough

--- a/links/sandy/index.html
+++ b/links/sandy/index.html
@@ -181,7 +181,7 @@
 				</p>
 
 			</div>
-			<span class="note"> UW Madison | 2013 </span>
+			<!-- <span class="note"> UW Madison | 2013 </span> -->
 		<footer> 
 
 			<p> UW Madison | 2013 </p>
