add redhat training to education

--- a/about.html
+++ b/about.html
@@ -136,6 +136,12 @@
             <li>North Dakota State College of Science</li>
           </ul>
 		  <br>
+		  <p> <strong>Red Hat System Administration</strong></p> 
+		  <ul>
+            <li>New Horizons Computer Learning Center</li>
+            <li>Enterprise Linux 7 SA training</li>
+          </ul>
+		  <br>
 		</section>
 		  <!--======== Experience =========-->
 		  <br>
@@ -143,7 +149,7 @@
 		  <br><br>
           <h2>Experience</h2>
           		  <p class="pull-right">2015 - Current</p>
-          <p> <strong>Sr. IT Specialist</strong></p> 
+          <p> <strong>Senior IT Specialist</strong></p> 
 		  <p> <strong><a href="http://www.gis.leg.mn/" target="_blank">Minnesota Legislative Coordinating Commission</a>, St. Paul, MN</strong></p>
 		  <ul>
 		       <li>Open-source GIS data and application development</li>
@@ -263,17 +269,17 @@
 
 		   <p> <strong>Mapping Technologies: </strong></p> 
 		  <ul>
-                     <li>ESRI ArcGIS 9.X-10.X, ArcGIS Server, ArcGIS Online, Maptitude for Redistricting, Open source GIS (QGIS, PostGIS, GDAL, OGR, MapServer, Mapshaper, Indiemapper)</li>
+                     <li>ESRI ArcGIS Desktop, ArcGIS Pro, ArcGIS Server, ArcGIS Online, Maptitude for Redistricting, Open source GIS (QGIS, PostGIS, GDAL, OGR, MapServer, Mapshaper, Indiemapper)</li>
                  </ul>
 		  <br>
 		   <p> <strong>Web Development: </strong></p> 
 		  <ul>
-                     <li>HTML5, CSS3, JavaScript, SVG, PHP, Microsoft IIS, Apache, jQuery, Dojo, .NET, AJAX, Angular, Bootstrap, Node.js, Firebug, Google Analytics, Git Version Control System</li>
+                     <li>HTML5, CSS3, JavaScript, SVG, PHP, Microsoft IIS, Apache, jQuery, Dojo, ASP.NET, Angular, Bootstrap, Node.js, Firebug, Google Analytics, Git Version Control System</li>
                   </ul>
 		  <br>
 		   <p> <strong>API Development: </strong></p> 
 		  <ul>
-                       <li>ArcGIS for JavaScript, D3.js, Leaflet, MapBox, MapServer, Twitter, Google Maps </li>
+                       <li>ArcGIS JavaScript, D3, Leaflet, Mapbox GL JS, MapServer, Google Maps, Twitter, Facebook </li>
                   </ul>
 		  <br>
 		   <p> <strong>Graphics Software: </strong></p> 
@@ -340,13 +346,15 @@
 		<br><br>
 		 <h2>Activities and Achievements</h2>
 		  <ul>
+		        <li>Minnesota Senate Resolution honoring achievement in cartography</li>
+		        <li>1st Place: Interactive map | <small>2015 Cartography & Geographic Information Society (CAGIS)</small></li>
 		        <li>Presenter: 2015 Wisconsin Land Information Assoc. | <a href="links/WLIA Presentation/index.html" target="_blank">Migrating your ArcGIS JS app to AMD</a></li>
 		        <li>Presenter: 2013 Minnesota GIS/LIS | <small>Interactive Cartography & Web Development with ArcGIS JS API</small></li>
-		        <li>1st Place: Interactive map | <small>2016 Cartography & Geographic Information Society (CAGIS)</small></li>
+		        
 		        <li>2nd Place: Interactive map | <small>2015 Wisconsin Land Information Association (WLIA)</small></li>
 		        <li>1st Place: Interactive map |<small> 2013 North American Cartographic Information Society (NACIS)</small> </li>
 		        <li>1st Place: Small-format map | <small>2013 Wisconsin Land Information Association (WLIA)</small></li>
-			<li>Minnesota Senate Resolution honoring achievement in cartography from CAGIS</li>
+			
 			<li>Trewartha Research Grant (UW-Madison)</li>
 			<li>1st Annual International Geocoding Conference Travel Grant | <small>Centers for Disease Control (CDC)</small></li>
 		        <li>Code for America | <small> Peer Network</small></li>
