i have two kids

--- a/about.html
+++ b/about.html
@@ -96,8 +96,8 @@
 
             
               <h2 class="author-title h4">About Chris</h2>
-              <p>That's me (on the right silly) with my son at a Twins game. </p>
-              <p>When I'm not thinking about geographic data, code, or design, I can be found decompressing with my wife and son. We are probably playing baseball, riding bike, gardening, training our German Shepherd, or ice fishing.</p>
+              <p>That's me (on the right silly) with my eldest son at a Twins game. </p>
+              <p>When I'm not thinking about geographic data, code, or design, I can be found decompressing with my wife and 2 sons. We are probably playing baseball, riding bike, gardening, training our German Shepherd, or ice fishing.</p>
               <p>We live in St. Paul, MN.</p>
             </div>
           </aside>
