--- a/portfolio.html
+++ b/portfolio.html
@@ -179,7 +179,7 @@ $(document).ready(function() {
 				<div id="callout-alerts-no-default" class="bs-callout bs-callout-warning">
 			            	<h4>CityViewer</h4>
 			            	<p>City of Wisconsin Rapids municipal GIS application uses the Esri ArcGIS JavaScript API and ArcGIS Server to serve information to citizens and staff. A more comprehensive and secure version of this app exists within City Hall that gives engineering staff access to infrastructure and corresponding records. With a simple click of the mouse, engineers access legacy pdf records and maintenance statuses.</p>
-			            	 <a href="http://gis.wirapids.org/CityViewer/" target="blank">
+			            	 <a href="http://gis.wirapids.org/CityViewerLite/" target="blank">
 			            	     <img id="crime" src="assets/thumbnails/interactive/CityViewer.jpg" class="img-responsive" alt="Responsive image">
 			            	</a>
 			            	<p style="margin-top:10px;font-style:italic"><i class="glyphicon glyphicon-star"></i> Fully responsive application. Test across any browser or device size.</p>
