--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
       <div id="third" class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">ArcGIS and SQL Server. <span class="text-muted">Data Governance.</span></h2>
+          <h2 class="featurette-heading">ArcGIS, PostGIS, and SQL Server. <span class="text-muted">Data Governance.</span></h2>
           <p class="lead">Keeping pace with emerging technologies. Focused on data security, data accuracy, and knowledge discovery using enterprise and open-source database technologies.</p><blockquote style="color:#c00000">It's difficult to imagine the power that you're going to have when so many different sorts of data are available. ~ Tim Berners-Lee</blockquote><p>
 		  <!-- <p><a class="btn btn-default" href="#" role="button">Modal 2 &raquo;</a></p> -->
         </div>
