Rework elections portfolio from college

--- a/links/election/demo/index.html
+++ b/links/election/demo/index.html
@@ -71,10 +71,10 @@
 	<h1>2012 Presidential Election Maps</h1>
 	
 	<div id="social">
-		<a href="https://twitter.com/share" class="twitter-share-button" data-url="https://mywebspace.wisc.edu/ccantey/web/images/fancybox/demo/index.html" data-via="ChrisCantey">Tweet</a>
+		<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://geo-odyssey.com/links/election/demo/index.html" data-via="ChrisCantey">Tweet</a>
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></br>
 	
-		<div class="fb-like" data-href="https://mywebspace.wisc.edu/ccantey/web/images/fancybox/demo/index.html" data-send="false" 	data-layout="button_count" data-width="450" data-show-faces="true" data-font="arial">
+		<div class="fb-like" data-href="http://geo-odyssey.com/links/election/demo/index.html" data-send="false" 	data-layout="button_count" data-width="450" data-show-faces="true" data-font="arial">
 	</div>
 	</div>
 	<h3 id="nomarg">Presenting an alternative model to the Red State vs Blue State mapping techniques</h3>
