Rework elections portfolio from college

--- a/links/election/demo/index.html
+++ b/links/election/demo/index.html
@@ -16,6 +16,19 @@
 	<meta name="description" content="Survey of election mapping techniques" />
 	<meta name="author" content="Chris Cantey, https://mywebspace.wisc.edu/ccantey/web/index.html" />
 	<meta name="keywords" content="cartogram, proportional symbol, election maps, election, value by alpha, cartography, dot density, choropleth">
+
+	<meta property="og:url"                content="http://geo-odyssey.com/links/election/demo/index.html" />
+    <meta property="og:type"               content="website" />
+    <meta property="og:title"              content="This Is What Democracy Looks Like." />
+    <meta property="og:description"        content="Visually equalizing voter sentiment." />
+    <meta property="og:image"              content="images/VbAWhite.png" />
+
+	<meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site:id" content="@ChrisCantey">
+    <meta name="twitter:creator" content="@ChrisCantey">
+    <meta name="twitter:title" content="This Is What Democracy Looks Like.">
+    <meta name="twitter:description" content="Visually equalizing voter sentiment.">
+    <meta name="twitter:image" content="images/VbAWhite.png">
 	<!-- END Meta tags -->
 
 	<!-- Add jQuery library -->
