tired of fixing this thing

--- a/links/sandy/index.html
+++ b/links/sandy/index.html
@@ -96,7 +96,7 @@
 					<img src = "img/right.png" id = "control-right-triangle" alt = "right-pointing triangle"/>
 					<img src = "img/down.png" id = "control-down-triangle" alt = "down-pointing triangle"/>
 					
-					<h2>MAP it!</h2>
+					<h2 class="text-akashi">MAP it!</h2>
 				</div><!-- end controls button div-->
 				
 				<div id= "controlsContent">
