--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
 		  <ul>
             <li>University of Wisconsin-Madison</li>
 
-            <li>Thesis: <a href="assets/Cantey-Thesis.pdf" target="_blank">Data-Mining Social Media for Spatiotemporal Patterns of Negative Opinion</a></li>
+            <li>Thesis: <a href="https://minds.wisconsin.edu/handle/1793/67797" target="_blank">Data-Mining Social Media for Spatiotemporal Patterns of Negative Opinion</a></li>
             <li>Research Interests: Interactive Cartography, Data Visualization, Big Data, GeoComputing, Election Mapping</li>
           </ul>
 		  <br>
